fixed div#porsche-mazda not expanding entirely on mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -7,6 +7,10 @@
         margin-right: 0;
     }
 
+    dl dd div#porsche-mazda img {
+        width: calc(100vw - 2rem);
+    }
+
     dl dd div.img img {
         width: 100%;
     }
